Adding linkedin urls

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 task schedulars.
               </p>
               <ul class="actions">
-                <li><a href="" class="button">Learn more</a></li>
+                <li><a href="https://www.linkedin.com/in/madhurg2002" class="button">Learn more</a></li>
               </ul>
             </div>
           </div>
@@ -155,7 +155,7 @@
                 working on the MapUI frontend, deck.gl layers, and the backend of the project.
               </p>
               <ul class="actions">
-                <li><a href="" class="button">Learn more</a></li>
+                <li><a href="https://www.linkedin.com/in/junaid001" class="button">Learn more</a></li>
               </ul>
             </div>
           </div>
@@ -171,8 +171,8 @@
             <div class="inner">
               <h2>Anuj Nandwana</h2>
               <p>
-                Major works include setting up tileserver for base maps and handling containerization 
-                and deployment of frontend, tileserver along with making Data UI dashboard.
+                Major works include setting up tileserver for base maps, handling deployment of frontend and tileserver 
+                along with creation Data UI dashboard.
                 
               </p>
               <ul class="actions">
