adding the root page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Hyperspace by HTML5 UP</title>
+    <title>YogLabs</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -24,8 +24,6 @@
         <nav>
           <ul>
             <li><a href="#intro">Welcome</a></li>
-            <li><a href="#two">Details about MapYog</a></li>
-            <li><a href="#one">Who we are</a></li>
             <li><a href="#three">Get in touch</a></li>
           </ul>
         </nav>
@@ -37,184 +35,19 @@
       <!-- Intro -->
       <section id="intro" class="wrapper style1 fullscreen fade-up">
         <div class="inner">
-          <h1>MapYog</h1>
+          <h1>YogLabs</h1>
           <p>
-            MapYog is dedicated to monitoring and understanding critical climate
-            and weather metrics, like AQI and temperature, at a hyperlocal
-            level. By curating data from multiple sources and using AI-driven
-            techniques, HoodLab offers detailed spatial and temporal analysis,
-            future predictions, and interactive map-based visualizations.
-            Explore and interpret complex environmental data with ease,
-            empowering you to make informed decisions for a healthier
-            environment.
           </p>
           <ul class="actions">
-            <li><a href="#two" class="button scrolly">Learn more</a></li>
+            <li><a href="mapyog.html" class="button scrolly">View Projects</a></li>
           </ul>
         </div>
-      </section>
-
-      <!-- Two -->
-      <section id="two" class="wrapper style3 fade-up">
-        <div class="inner">
-          <!-- <h2>What we do</h2> -->
-          <p>
-            HoodLab is built on Kepler.gl, leveraging its robust geospatial visualization capabilities while 
-            extending them to offer more customizable features. The use of deck.gl for creating layers allows 
-            HoodLab to handle complex visualizations, including 3D data representation and dynamic updates. 
-            This combination of technologies ensures that HoodLab can provide detailed, high-quality visualizations 
-            while offering the flexibility and scalability required for advanced geospatial analysis.
-          </p>
-          <div class="features">
-            <section>
-              <span class="icon solid major fa-code"></span>
-              <h3>User Interfce Overview</h3>
-              <a href="#" class="image" 
-                ><img src="images/overview.png" style="height: 200px; width:380px" alt="" data-position="25% 25%"
-              /></a>
-            </section>
-            <section>
-              <span class="icon solid major fa-lock"></span>
-              <h3>Time Series Analysis of a sensor</h3>
-              <a href="#" class="image" 
-              ><img src="images/timeseriesAnalysis.png" style="height: 200px; width:380px" alt="" data-position="25% 25%"
-            /></a>      
-            </section>
-            
-            <section>
-              <span class="icon solid major fa-desktop"></span>
-              <h3>Details of a particular sensor</h3>
-              <a href="#" class="image" 
-              ><img src="images/sensorInfo.png" style="height: 200px; width:380px" alt="" data-position="25% 25%"
-            /></a>
-            </section>
-            <section>
-              <span class="icon solid major fa-link"></span>
-              <h3>Parametric Filteration</h3>
-              <a href="#" class="image" 
-              ><img src="images/filteration.png" style="height: 200px; width:380px" alt="" data-position="25% 25%"
-            /></a>
-            </section>
-          </div>
-          <p>Above metioned are only a few of the functionality mapyog delivers for more details check out our demo.</p>
-          <ul class="actions">
-            <li><a href="https://mapyog-ui-image-rqxdqxcvxa-uc.a.run.app/" class="button">View Demo</a></li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- One -->
-      <section id="one" class="wrapper style2 spotlights">
-        <section>
-          <a href="#" class="image"
-            ><img src="images/pic01.jpg" alt="" data-position="center center"
-          /></a>
-          <div class="content">
-            <div class="inner">
-              <h2>Ankit Sharma</h2>
-              <p>
-                Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-                turpis mauris, eu ultricies erat malesuada quis. Aliquam
-                dapibus.
-              </p>
-              <ul class="actions">
-                <li><a href="" class="button">Learn more</a></li>
-              </ul>
-            </div>
-          </div>
-        </section>
-        <section>
-          <a href="#" class="image"
-            ><img
-              src="images/madhurProfile.jpg"
-              alt=""
-              data-position="top center"
-          /></a>
-          <div class="content">
-            <div class="inner">
-              <h2>Madhur Gupta</h2>
-              <p>
-                Contributions in mapyog include design and implementaion of backend Api's for data dashboard and 
-                task schedulars.
-              </p>
-              <ul class="actions">
-                <li><a href="https://www.linkedin.com/in/madhurg2002" class="button">Learn more</a></li>
-              </ul>
-            </div>
-          </div>
-        </section>
-        <section>
-          <a href="#" class="image"
-            ><img src="images/junaidProfile.jpg" alt="" data-position="25% 25%"
-          /></a>
-          <div class="content">
-            <div class="inner">
-              <h2>Mohd Junaid</h2>
-              <p>
-                Worked on both frontend and backend technologies. Major contributions include 
-                working on the MapUI frontend, deck.gl layers, and the backend of the project.
-              </p>
-              <ul class="actions">
-                <li><a href="https://www.linkedin.com/in/junaid001" class="button">Learn more</a></li>
-              </ul>
-            </div>
-          </div>
-        </section>
-        <section>
-          <a href="#" class="image"
-            ><img
-              src="images/AnujProfilenew.jpg"
-              alt=""
-              data-position="25% 25%"
-          /></a>
-          <div class="content">
-            <div class="inner">
-              <h2>Anuj Nandwana</h2>
-              <p>
-                Major works include setting up tileserver for base maps, handling deployment of frontend and tileserver 
-                along with creation Data UI dashboard.
-                
-              </p>
-              <ul class="actions">
-                <li><a href="https://www.linkedin.com/in/anujnandwana/" class="button">Learn more</a></li>
-              </ul>
-            </div>
-          </div>
-        </section>
       </section>
 
       <!-- Three -->
       <section id="three" class="wrapper style1 fade-up">
         <div class="inner">
           <h2>Get in touch</h2>
-          <!-- <p>
-            Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-            turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus,
-            lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-            imperdiet est velit quis lorem.
-          </p>
-          <div class="split style1">
-            <section>
-              <form method="post" action="#">
-                <div class="fields">
-                  <div class="field half">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" />
-                  </div>
-                  <div class="field half">
-                    <label for="email">Email</label>
-                    <input type="text" name="email" id="email" />
-                  </div>
-                  <div class="field">
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" rows="5"></textarea>
-                  </div>
-                </div>
-                <ul class="actions">
-                  <li><a href="" class="button submit">Send Message</a></li>
-                </ul>
-              </form>
-            </section> -->
             <section>
               <ul class="contact">
                 <li>
